[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
openraft = { version = "0.8.3", features = ["serde"] }
async-trait = "0.1.73"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32", features = ["sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
actix-web = "4.4.0"
